[package]
name = 'launch-runtime'
# major.minor revision must match collator node. patch should match the runtimes' `spec_version`.
version = '1.6.3'
authors = ["Encointer <info@encointer.org>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }
log = { version = "0.4.20", default-features = false }
parachain-info = { package = "staging-parachain-info", default-features = false, version = "0.3.0" }
scale-info = { version = "2.5.0", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.132", default-features = false, optional = true, features = ["derive"] }

# local deps
runtime-common = { default-features = false, path = "../runtime-common" }

# Substrate dependencies
sp-api = { default-features = false, version = "22.0.0" }
sp-block-builder = { default-features = false, version = "22.0.0" }
sp-consensus-aura = { default-features = false, version = "0.28.0" }
sp-core = { default-features = false, version = "24.0.0" }
sp-inherents = { default-features = false, version = "22.0.0" }
sp-io = { default-features = false, version = "26.0.0" }
sp-offchain = { default-features = false, version = "22.0.0" }
sp-runtime = { default-features = false, version = "27.0.0" }
sp-session = { default-features = false, version = "23.0.0" }
sp-std = { default-features = false, version = "11.0.0" }
sp-transaction-pool = { default-features = false, version = "22.0.0" }
sp-version = { default-features = false, version = "25.0.0" }

frame-executive = { default-features = false, version = "24.0.0" }
frame-support = { default-features = false, version = "24.0.0" }
frame-system = { default-features = false, version = "24.0.0" }
frame-system-rpc-runtime-api = { default-features = false, version = "22.0.0" }
pallet-asset-tx-payment = { default-features = false, version = "24.0.0" }
pallet-aura = { default-features = false, version = "23.0.0" }
pallet-balances = { default-features = false, version = "24.0.0" }
pallet-collective = { default-features = false, version = "24.0.0" }
pallet-insecure-randomness-collective-flip = { default-features = false, version = "12.0.0" }
pallet-membership = { default-features = false, version = "24.0.0" }
pallet-proxy = { default-features = false, version = "24.0.0" }
pallet-scheduler = { default-features = false, version = "25.0.0" }
pallet-timestamp = { default-features = false, version = "23.0.0" }
pallet-transaction-payment = { default-features = false, version = "24.0.0" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "24.0.0" }
pallet-treasury = { default-features = false, version = "23.0.0" }
pallet-utility = { default-features = false, version = "24.0.0" }

parachains-common = { default-features = false, version = "3.0.0" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { default-features = false, version = "0.3.0" }
cumulus-pallet-dmp-queue = { default-features = false, version = "0.3.0" }
cumulus-pallet-parachain-system = { default-features = false, features = [
    "parameterized-consensus-hook",
], version = "0.3.0" }
cumulus-pallet-xcm = { default-features = false, version = "0.3.0" }
cumulus-pallet-xcmp-queue = { default-features = false, version = "0.3.0" }
cumulus-primitives-core = { default-features = false, version = "0.3.0" }
cumulus-primitives-timestamp = { default-features = false, version = "0.3.0" }
cumulus-primitives-utility = { default-features = false, version = "0.3.0" }

# Polkadot dependencies
pallet-xcm = { default-features = false, version = "3.0.0" }
polkadot-parachain-primitives = { default-features = false, version = "2.0.0" }
polkadot-runtime-common = { default-features = false, version = "3.0.0" }
xcm = { package = "staging-xcm", default-features = false, version = "3.0.0" }
xcm-builder = { package = "staging-xcm-builder", default-features = false, version = "3.0.0" }
xcm-executor = { package = "staging-xcm-executor", default-features = false, version = "3.0.0" }

# used for try-runtime
frame-try-runtime = { default-features = false, optional = true, version = "0.30.0" }
try-runtime-cli = { default-features = false, optional = true, version = "0.34.0" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, optional = true, version = "24.0.0" }
frame-system-benchmarking = { default-features = false, optional = true, version = "24.0.0" }
hex-literal = { version = "0.3.1", optional = true }

[build-dependencies]
substrate-wasm-builder = { optional = true, version = "13.0.0" }

[features]
default = ["std"]
runtime-benchmarks = [
    "cumulus-pallet-xcmp-queue/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "hex-literal",
    "pallet-balances/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-membership/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "xcm-executor/runtime-benchmarks",
]
std = [
    "codec/std",
    "cumulus-pallet-aura-ext/std",
    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-timestamp/std",
    "cumulus-primitives-utility/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime/std",
    "log/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-collective/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-membership/std",
    "pallet-proxy/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "pallet-utility/std",
    "pallet-xcm/std",
    "parachain-info/std",
    "parachains-common/std",
    "runtime-common/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "substrate-wasm-builder",
    "xcm-builder/std",
    "xcm-executor/std",
    "xcm/std",
]


try-runtime = [
    "cumulus-pallet-aura-ext/try-runtime",
    "cumulus-pallet-dmp-queue/try-runtime",
    "cumulus-pallet-parachain-system/try-runtime",
    "cumulus-pallet-xcm/try-runtime",
    "cumulus-pallet-xcmp-queue/try-runtime",
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-insecure-randomness-collective-flip/try-runtime",
    "pallet-proxy/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-xcm/try-runtime",
    "parachain-info/try-runtime",
]

experimental = ["pallet-aura/experimental"]
