[package]
name = "runtime-common"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = "1.6.1"

kusama-runtime-constants = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.2.0" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.2.0" }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.2.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.2.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.2.0" }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.2.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.2.0" }

[features]
default = ["std"]
std = [
    "kusama-runtime-constants/std",
    "polkadot-core-primitives/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-treasury/std",
]
