[package]
name = "runtime-common"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = "1.6.1"

kusama-runtime-constants = { default-features = false, version = "3.0.0" }
polkadot-core-primitives = { default-features = false, version = "3.0.0" }

frame-support = { default-features = false, version = "24.0.0" }
frame-system = { default-features = false, version = "24.0.0" }
pallet-balances = { default-features = false, version = "24.0.0" }
pallet-treasury = { default-features = false, version = "23.0.0" }
sp-runtime = { default-features = false, version = "27.0.0" }

[features]
default = ["std"]
std = [
    "kusama-runtime-constants/std",
    "polkadot-core-primitives/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-treasury/std",
]
