[package]
name = "runtime-common"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = { workspace = true }

kusama-runtime-constants = { workspace = true }
polkadot-core-primitives = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-treasury = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
    "kusama-runtime-constants/std",
    "polkadot-core-primitives/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-treasury/std",
]
