[package]
name = 'encointer-parachain-runtime'
# minor revision must match node/client
# patch revision must match runtime spec_version
version = '0.2.5'
authors = ["Encointer <info@encointer.org>"]
license = "GPL-3.0"
edition = '2018'

[dependencies.encointer-scheduler]
default-features = false
git = "https://github.com/encointer/pallets"
branch = "rococo3"
package = "pallet-encointer-scheduler"

[dependencies.encointer-ceremonies]
default-features = false
git = "https://github.com/encointer/pallets"
branch = "rococo3"
package = "pallet-encointer-ceremonies"

[dependencies.encointer-communities]
default-features = false
git = "https://github.com/encointer/pallets"
branch = "rococo3"
package = "pallet-encointer-communities"

[dependencies.encointer-balances]
default-features = false
git = "https://github.com/encointer/pallets"
branch = "rococo3"
package = "pallet-encointer-balances"

[dependencies.encointer-bazaar]
default-features = false
git = "https://github.com/encointer/pallets"
branch = "rococo3"
package = "pallet-encointer-bazaar"

[dependencies.encointer-primitives]
default-features = false
git = "https://github.com/encointer/pallets"
branch = "rococo3"
package = "encointer-primitives"

[dependencies.encointer-personhood-oracle]
default-features = false
git = "https://github.com/encointer/pallets"
branch = "rococo3"
package = "pallet-encointer-personhood-oracle"

[dependencies.encointer-sybil-gate-template]
default-features = false
git = "https://github.com/encointer/pallets"
branch = "rococo3"
package = "pallet-encointer-sybil-gate-template"

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
tag = "v0.5.6"
package = "substrate-fixed"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

parachain-info = { path = "../pallets/parachain-info", default-features = false }
rococo-parachain-primitives = { path = "../primitives", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

# Cumulus dependencies
cumulus-pallet-parachain-system = { path = "../../pallets/parachain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-pallet-xcm-handler = { path = "../../pallets/xcm-handler", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }

[build-dependencies]
substrate-wasm-builder = "3.0.0"

[features]
default = [ "std" ]
std = [
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"rococo-parachain-primitives/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm-handler/std",
	"cumulus-primitives-core/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"encointer-scheduler/std",
	"encointer-ceremonies/std",
	"encointer-balances/std",
	"encointer-communities/std",
	"encointer-bazaar/std",
	"encointer-primitives/std",
	"encointer-personhood-oracle/std",
	"encointer-sybil-gate-template/std",
    "fixed/std"
]
