[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "parachain-info"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
]
